--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,16 @@
-== README
+##PREPIFY SAT Prep App
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+##### Prepify is FREE, online SAT prep for any student, anywhere.
 
-Things you may want to cover:
+By raising SAT scores, Prepify enables students of all income backgrounds to earn admission and merit scholarships from elite colleges and universities.
 
-* Ruby version
+#### Features
+- Students sign-up on main page
+- Students take interactive lessons from the three SAT categories: Math, Reading, Writing
+Students track their progress via their personalized report card
+Admin can upload, edit, and view lessons
+Admin can view and edit all users (including student report cards)
 
-* System dependencies
+Technologies: 
+Rails 4.0, JQuery, AJAX, Carriewave/Amazon S3, Foundation open-source gems: Mailer, Devise
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
